--- a/functions/package.json
+++ b/functions/package.json
@@ -12,6 +12,7 @@
     "node": "8"
   },
   "dependencies": {
+    "argv": "0.0.2",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
     "puppeteer": "^2.0.0"
