--- a/day_schedule/android/app/src/main/AndroidManifest.xml
+++ b/day_schedule/android/app/src/main/AndroidManifest.xml
@@ -26,5 +26,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-2360113281922238~5575290305"/>
     </application>
 </manifest>
