--- a/day_schedule/pubspec.yaml
+++ b/day_schedule/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: any
+
+flutter_icons:
+  image_path: "icon/twb011_1.png" 
+  android: true
+  ios: true
 
 
 # For information on the generic Dart part of this file, see the
