--- a/functions/package.json
+++ b/functions/package.json
@@ -15,7 +15,8 @@
     "argv": "0.0.2",
     "firebase-admin": "^8.0.0",
     "firebase-functions": "^3.0.0",
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.0.0",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
